Enhance data center framework and modular architecture
- Expanded the data center framework to include features for distributed data processing, real-time analytics, and dynamic workflow support.
- Introduced new DSL configurations for data storage, cluster management, and analytics engine.
- Updated the application context to support additional components like analytics and stream processors.
- Enhanced the plugin system to allow for various data center functionalities and improved modularity.
- Implemented a detailed roadmap for phased development, focusing on distributed architecture and performance optimization.